--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -40,9 +40,8 @@ jobs:
         username: ${{ secrets.PROD_USER }}
         password: ${{ secrets.PROD_PWD }}
         script:
-          tmux kill-session -t 0
-          tmux new-session
-          docker pull antonfolkmann/minitwit
-          docker run -d -p 8081:8081
-          tmux detach
+          docker kill minitwit && \
+          docker rm minitwit && \
+          docker pull antonfolkmann/minitwit && \
+          docker run -d -p 8081:8081 --name minitwit antonfolkmann/minitwit
     
